# controllers/admin/posts/update/update_contract.go
@@ -1,0 +1,16 @@
+package create
+
+import (
+	"gosimplecms/models"
+	"time"
+)
+
+func (ctl *PostUpdateController) transformToResponse(post *models.Post) *models.CreateUpdatePostResponse {
+	return &models.CreateUpdatePostResponse{
+		ID:        post.ID,
+		Title:     post.Title,
+		Status:    post.Status,
+		CreatedAt: post.CreatedAt.Format(time.RFC3339),
+		UpdatedAt: post.UpdatedAt.Format(time.RFC3339),
+	}
+}
